# NYCRatRiskIntelligence

./: .env.example  .gitignore  README.md  SPEC.md  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  render.yaml
.github/workflows/: api-test-deploy.yml  keepalive.yml  rag-eval-nightly.yml  web-test-deploy.yml
api/: Dockerfile  alembic.ini  pyproject.toml  render.yaml
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schemas.py  0002_nta_reference.py  0003_pluto.py  0004_tft_forecasts.py  0005_narrative_cache.py
api/src/rat_api/: config.py  db.py  main.py
api/src/rat_api/ml/: features.py  loader.py  predict.py
api/src/rat_api/models/: risk.py
api/src/rat_api/obs/: __init__.py  tracing.py
api/src/rat_api/rag/: generator.py  prompts.py  reranker.py  retrieve.py  retriever.py
api/src/rat_api/routes/: chat.py  health.py  inspections.py  narrative.py  risk.py
api/src/tests/: conftest.py  test_chat_route.py  test_predict.py  test_retriever.py  test_routes_health.py  test_routes_narrative.py  test_routes_risk.py
docs/: PRD.md  architecture.md  case-study.md  cost-model.md  load-test.md  runbook.md
docs/decisions/: 0001-single-cloud.md  0002-clay-pca-columns.md  0003-acs-income-source.md  0004-rls-deferred.md  0005-clay-cut.md  0006-groq-llm.md  0007-embeddings-prod.md
docs/plans/: phase-1.md  phase-2.md  phase-3.md  phase-4.md
evals/: pyproject.toml
evals/src/: judge.py  metrics.py  runners.py
evals/src/rat_evals/: runners.py
infra/scripts/: load_test.js
ml/: pyproject.toml
ml/artifacts/: registry.json
ml/artifacts/tabular/catboost/2026-06-05T18-42-14/: metadata.json  model.joblib  oof_predictions.json  report.md
ml/notebooks/: 01_reporting_bias.ipynb
ml/scripts/: build_clay_embeddings.py  build_panel.py  build_rag_corpus.py  build_regime_indicators.py  build_spatial_lags.py  data_quality_report.py  ingest_sentinel2.py  load_nta_boundaries.py  materialize_predictions.py  materialize_tft_forecasts.py  train_chronos.py  train_fusion.py  train_tabular.py  train_tft.py
ml/scripts/rag/: _ingest_common.py  ingest_ecb_penalties.py  ingest_health_code_151.py  ingest_hmc_27_2017.py  ingest_rcny_81_23.py  ingest_rodent_academy.py
ml/src/rat_ml/data/: _socrata.py  bbl_join.py  ingest_311.py  ingest_dob_permits.py  ingest_pluto.py  ingest_restaurant_inspections.py  ingest_rodent_inspections.py  ingest_sentinel2.py  ingest_weather.py  tract_crosswalk.py
ml/src/rat_ml/eval/: metrics.py  timeseries_cv.py
ml/src/rat_ml/features/: clay_embeddings.py  feature_matrix.py  panel.py  regime_indicators.py  spatial_lags.py  temporal.py  tft_dataset.py
ml/src/rat_ml/models/: chronos_trainer.py  fusion.py  registry.py  tabpfn_borough.py  tabular.py  tft_trainer.py
ml/src/rat_ml/rag/: corpus.py  embed.py  pdf_parser.py  store.py
ml/src/rat_ml/reporting/: data_quality.py
ml/tests/: test_bbl_join.py  test_build_panel.py  test_crosswalk.py  test_geom_bbox.py  test_idempotency.py  test_ingest_311.py  test_ingest_rodent_inspections.py  test_panel_nulls.py  test_rag_chunking.py  test_rag_corpus.py  test_regime_indicators.py  test_registry.py  test_spatial_lags.py  test_tabular.py  test_tft_dataset.py  test_timeseries_cv.py
web/: next.config.ts  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  vercel.json
web/app/: layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/chat/: page.tsx
web/app/nta/[id]/: page.tsx
web/components/: nav.tsx  providers.tsx
web/components/charts/: FactorBar.tsx  ForecastChart.tsx
web/components/chat/: ChatThread.tsx  CitationPill.tsx
web/components/map/: RiskMap.tsx
web/lib/: api.ts  types.ts
