[project]
name = "rat-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  # Web framework
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  # Validation / settings
  "pydantic>=2.6",
  "pydantic-settings>=2.3",
  # Database
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "python-dotenv>=1.0",
  # LLMs / embeddings / rerank
  "anthropic>=0.34",
  "voyageai>=0.3",
  "cohere>=5.5",
  "litellm>=1.40",
  # Observability — LLM tracing (OpenInference spec)
  "opentelemetry-sdk>=1.26",
  "opentelemetry-exporter-otlp-proto-grpc>=1.26",
  "openinference-instrumentation-anthropic>=0.1",
  "openinference-instrumentation-openai>=0.1",
  # openinference-instrumentation-cohere does not exist on PyPI;
  # Cohere rerank spans are instrumented manually via opentelemetry-sdk.
  # Error tracking
  "sentry-sdk[fastapi]>=2.13",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "anyio>=4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rat_api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: requires a live Supabase DB connection (skipped in CI without DATABASE_URL)",
]
testpaths = ["src/tests"]
